--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nzsb-i-gen",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "SVG Icon Generator",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "test": "jest --config jestconfig.json",
-    "build": "tsc",
+    "build": "tsc && fantasticon src/icon-src -o src/icon-dist",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p tsconfig.json",
     "prepare": "npm run build",
