--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "nzsb-i-gen",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "SVG Icon Generator",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": [
     "/lib/**/*",
-    "/fonts/**/*"
+    "/font/**/*"
   ],
   "scripts": {
     "test": "jest --config jestconfig.json",
